fixed alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ header h1 a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 2px 2px 2px rgb(201, 197, 197);
 }
+main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
 
 .self {
     display: flex;
@@ -60,15 +65,15 @@ header h1 a{
 
 .about-me-container {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1000px;
-    max-height: 300px;
+    flex-direction: row;
+    max-width: 100%;
+    max-height: 30%px;
     flex: 1 1 300px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .about-me-container h3 {
-    width: 100%;
+    display:flex;
     font-size: 200%;
     justify-content: flex-end;
     text-shadow: 2px 2px 2px rgb(201, 197, 197);
@@ -77,29 +82,37 @@ header h1 a{
 .about-me-container p {
     width:100%;
    font-size: 18px;
-   justify-content: flex-start;
+   justify-content: flex-end;
    padding-left: 15px;
    border-style: solid;
    border-width: 0px 0px 0px 5px;
    margin-bottom: 15px;
 }
 
-#navlink2 {
-    text-align: left;
-    width: 100%;
-      text-shadow: 2px 2px 2px rgb(201, 197, 197);
-      font-size: 200%;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ #navlink2 {
+    display:flex;
+    font-size: 200%;
+    justify-content: flex-start;
+    text-shadow: 2px 2px 2px rgb(201, 197, 197);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }  
 
-aside .work-container {
+.work-container {
     display: flex;
     flex-direction: row;
+   max-width: 100%;
+    max-height: 30%px;
+    flex: 1 1 300px;
+}
+
+.work-container aside  {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1 1 500px;
     flex-wrap: wrap;
     overflow: auto;
-    flex: 1 1 500px;
-    max-height: 500px;
-    max-width: 500px;
+    max-height: 400px;
+    max-width: 400px;
 }
 
 title {
@@ -107,6 +120,9 @@ title {
 }
 
 .img-size {
+    display: flex;
+    justify-content: row;
+    justify-content: flex-end;
     max-width: 90%;
     max-height: 90%;
     margin: 15px;
@@ -144,19 +160,19 @@ title {
 
 
 .contact-container {
-    flex-wrap: wrap;
-    flex: 1 1 300px;
-    max-width: 1000px;
-    max-height: 300px;
     display: flex;
+    flex-direction: row;
+   max-width: 100%;
+    max-height: 30%px;
+    flex: 1 1 300px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .contact-container h3 {
-    width: 100%;
-    text-shadow: 2px 2px 2px rgb(201, 197, 197);
+    display:flex;
     font-size: 200%;
-    justify-content: flex-end; 
+    justify-content: flex-start;
+    text-shadow: 2px 2px 2px rgb(201, 197, 197);
 }
 
 .contact-container p {
